--- a/src/styles/modal/popup.scss
+++ b/src/styles/modal/popup.scss
@@ -31,8 +31,8 @@
   &__overlay {
     position: absolute;
     inset: 0;
-    backdrop-filter: blur(1px);
-    background: rgba(13, 13, 13, 0.6);
+    backdrop-filter: blur(5px);
+    background: rgba(13, 13, 13, 0.8);
     cursor: pointer;
   }
 
