--- a/src/styles/section/block_details_mega.scss
+++ b/src/styles/section/block_details_mega.scss
@@ -222,7 +222,7 @@
     .accordion-item__content {
       .details-content-links {
         margin-top: 40px;
-        margin-bottom: 40px;
+        margin-bottom: 40px !important;
       }
     }
     .block-services-included {
@@ -248,6 +248,7 @@
 
     .block-button {
       margin-top: 40px;
+      margin-bottom: 100px;
 
       &:first-child {
         margin-top: -60px !important;
