--- a/src/styles/section/block_post_cards.scss
+++ b/src/styles/section/block_post_cards.scss
@@ -15,7 +15,7 @@
 
 .publications {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(0, 488px));
   gap: 56px;
   margin-top: 20px;
 
